--- a/_posts/2021-01-05-c0ala-project-01.md
+++ b/_posts/2021-01-05-c0ala-project-01.md
@@ -20,14 +20,15 @@ tags: [개발, Node.js, React.js, AWS]
 경험해보지 못했었고, 프론트엔드만 개발해왔기 때문에 서버 개발도 생소한 분야였다. 그런 나에게 아무리 간단한 사이트라고
 해도 웹 풀스택으로 개발을 하라니 조금 걱정이 되었다. 하지만 한편으로는 새로운 개발을 할 수 있겠다는 생각에 설레기도 하였다.  
 
-가장 처음 한 고민은 어떤 프레임워크를 사용할 지에 대한 것이었다. 웹 개발에서는 React.js, Vue.js, Angular.js가 프레임워크 
-3대장이라는 이야기를 들었기 때문에 그 중 하나를 고르기로 했고, 폭풍 구글링을 한 결과 가장 많이 쓰이고, 자료가 많아 보이는 
-리액트로 정하게 되었다.  
+가장 처음 한 고민은 어떤 라이브러리를 사용할 지에 대한 것이었다. 웹 개발에서는 React.js, Vue.js, Angular.js가 3대장이라는 
+이야기를 들었기 때문에 그 중 하나를 고르기로 했고, 폭풍 구글링을 한 결과 가장 많이 쓰이고, 자료가 많아 보이는 리액트로 정하게 되었다.  
 
-그리고 서버는 예전부터 파이썬 Django에 관심이 있었기 때문에 장고로 해볼까 했지만, 리액트와 장고로 웹 풀스택 개발을 하는 것보다
-Node.js를 쓰는 것에 대한 자료가 더 많아서 Node.js를 택하게 되었다.  
+그리고 서버는 예전부터 파이썬 Django에 관심이 있었기 때문에 장고로 해볼까 했지만, 리액트와 장고로 보다는 Node.js를 쓰는 것에 대한
+자료가 더 많아서 Node.js를 택하게 되었다.  
 
 그렇게 나는 리액트와 Node.js를 사용해 웹 풀스택 개발을 하게 되었고, 그에 대한 공부를 시작했다. 이번 글에서는 리액트를 공부했던
 것에 대한 기록을 남길까 한다.
 
 ## 리액트란?
+
+React는 페이스북에서 개발한 사용자 인터페이스를 만들기 위한 JavaScript 라이브러리이다. 
